# acg-Haraldol

task01/: main.cpp
task02/: main.cpp
task03/: main.cpp
task04/: main.cpp  shader.vert
task05/: shader.frag
task06/: README.md  main.cpp
task07/: CMakeLists.txt  main.cpp  out_brdf.png:Zone.Identifier  out_light.png:Zone.Identifier  out_mis.png:Zone.Identifier
task09/: main.py
